<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical">

    <RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:id="@+id/btnGroup">

        <RadioButton
            android:id="@+id/addBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/zbrajanje" />

        <RadioButton
            android:id="@+id/subBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/oduzimanje" />

        <RadioButton
            android:id="@+id/mulBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/mnozenje" />

        <RadioButton
            android:id="@+id/divBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/dijeljenje" />
    </RadioGroup>

    <EditText
        android:id="@+id/firstInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:hint="@string/prvi_broj" />

    <EditText
        android:id="@+id/secondInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:hint="@string/drugi_broj" />

    <Button
        android:id="@+id/calcBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/izracunaj" />

</LinearLayout>